--- a/package.json
+++ b/package.json
@@ -4,21 +4,25 @@
   "scripts": {
     "test": "npm run build && npm run lint",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
-    "build": "tsc -p .",
-    "watch": "tsc -p . -w --preserveWatchOutput --inlineSourceMap",
+    "build": "webpack",
+    "watch": "webpack -w",
     "start": "tabris serve -a -w"
   },
   "dependencies": {
     "crypto-js": "^3.3.0",
     "hashids": "^2.2.1",
     "lodash": "^4.17.20",
-    "tabris": "~3.6.0"
+    "tabris": "~3.6.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
-    "eslint": "^7.7.0",
-    "eslint-plugin-react": "^7.20.6",
-    "typescript": "~3.8.3"
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "eslint": "^7.13.0",
+    "eslint-plugin-react": "^7.21.5",
+    "javascript-obfuscator": "^2.9.3",
+    "typescript": "~3.8.3",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-obfuscator": "^3.1.0"
   }
 }
