--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "@typescript-eslint/parser": "^4.7.0",
     "eslint": "^7.13.0",
     "eslint-plugin-react": "^7.21.5",
-    "typescript": "~3.8.3",
-    "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0"
+    "typescript": "~3.8.3"
   }
 }
